Derive chat completions endpoint from configured base URLs

--- a/index.html
+++ b/index.html
@@ -714,8 +714,8 @@
         <select id="endpointSelect"></select>
       </div>
       <div class="form-group">
-        <label for="endpointInput">API endpoint</label>
-        <input type="text" id="endpointInput" placeholder="https://api.example.com/v1/chat/completions" />
+        <label for="endpointInput">API base URL</label>
+        <input type="text" id="endpointInput" placeholder="https://api.example.com/v1" />
       </div>
       <p id="endpointHint" class="hint-text" role="note"></p>
       <div class="form-group">
@@ -871,7 +871,7 @@
         <li><code>localStorage</code>: chat threads and messages.</li>
         <li><code>sessionStorage</code>: settings (endpoint, token, models) for the current session.</li>
       </ul>
-      <p>No network calls happen unless you set an API endpoint and press <em>Send</em> (or <em>Refresh model list</em>).</p>
+      <p>No network calls happen unless you set an API base URL and press <em>Send</em> (or <em>Refresh model list</em>).</p>
 
       <div class="cta-row">
         <a id="jfSiteLink" class="cta-link" href="https://JournalFoundation.org" target="_blank" rel="noopener">JournalFoundation.org</a>
@@ -962,28 +962,28 @@
           label: 'Select an endpoint…',
           baseUrl: '',
           hint:
-            'Pick a provider from the list to auto-fill the API endpoint and see instructions for locating its API key. You can still paste any custom endpoint below.'
+            'Pick a provider from the list to auto-fill the API base URL and see instructions for locating its API key. You can still paste any custom endpoint below.'
         },
         {
           id: 'openrouter',
           label: 'OpenRouter — multi-model hub',
           baseUrl: 'https://openrouter.ai/api/v1',
           hint:
-            'Aggregator of Anthropic, Mistral, Llama 3 and more. Create an account at <a href="https://openrouter.ai/" target="_blank" rel="noopener">openrouter.ai</a>, open <strong>API Keys</strong>, click <strong>Create Key</strong>, set an optional spend limit, and copy the key (it is shown only once).'
+            'Aggregator of Anthropic, Mistral, Llama 3 and more. Create an account at <a href="https://openrouter.ai/" target="_blank" rel="noopener">openrouter.ai</a>, open <strong>API Keys</strong>, click <strong>Create Key</strong>, set an optional spend limit, and copy the key (it is shown only once). Requests use the <code>/chat/completions</code> path on this base URL.'
         },
         {
           id: 'vercel',
           label: 'Vercel AI Gateway',
           baseUrl: 'https://ai-gateway.vercel.sh/v1',
           hint:
-            'Proxy that fans out to Anthropic, Groq, Mistral, Perplexity and more. In the Vercel dashboard go to <strong>AI Gateway → API Keys</strong>, click <strong>Create key</strong>, name it, and copy the generated key for your requests.'
+            'Proxy that fans out to Anthropic, Groq, Mistral, Perplexity and more. In the Vercel dashboard go to <strong>AI Gateway → API Keys</strong>, click <strong>Create key</strong>, name it, and copy the generated key for your requests. Requests hit <code>/chat/completions</code> on this base URL.'
         },
         {
           id: 'cloudflare',
           label: 'Cloudflare AI Gateway',
           baseUrl: 'https://gateway.ai.cloudflare.com/v1/{account_id}/{gateway_id}/compat',
           hint:
-            'Routes to Gemini, Cohere, Perplexity and other providers. In the Cloudflare dashboard open <strong>AI → AI Gateway</strong>, choose your gateway, add provider API keys under <strong>Provider Keys</strong>, and optionally generate an access token to send in the <code>cf-aig-authorization</code> header.',
+            'Routes to Gemini, Cohere, Perplexity and other providers. In the Cloudflare dashboard open <strong>AI → AI Gateway</strong>, choose your gateway, add provider API keys under <strong>Provider Keys</strong>, and optionally generate an access token to send in the <code>cf-aig-authorization</code> header. Requests go to <code>/chat/completions</code> beneath this base URL.',
           detect: value => value.startsWith('https://gateway.ai.cloudflare.com/')
         },
         {
@@ -991,98 +991,98 @@
           label: 'Anyscale Endpoints',
           baseUrl: 'https://api.endpoints.anyscale.com/v1',
           hint:
-            'Hosted Mixtral and Llama family models. Sign in at <a href="https://www.anyscale.com/" target="_blank" rel="noopener">Anyscale</a>, open the Endpoints dashboard, and create an API key to authenticate with this URL.'
+            'Hosted Mixtral and Llama family models. Sign in at <a href="https://www.anyscale.com/" target="_blank" rel="noopener">Anyscale</a>, open the Endpoints dashboard, and create an API key to authenticate with this URL. Use it as the base; the client appends <code>/chat/completions</code> when calling the API.'
         },
         {
           id: 'groq',
           label: 'Groq — low-latency inference',
           baseUrl: 'https://api.groq.com/openai/v1',
           hint:
-            'Runs LLaMA and Mixtral models on Groq hardware. After logging in to <a href="https://console.groq.com/" target="_blank" rel="noopener">Groq Cloud</a>, open <strong>Developers</strong>, click <strong>Create API Key</strong>, and copy the key when it appears.'
+            'Runs LLaMA and Mixtral models on Groq hardware. After logging in to <a href="https://console.groq.com/" target="_blank" rel="noopener">Groq Cloud</a>, open <strong>Developers</strong>, click <strong>Create API Key</strong>, and copy the key when it appears. Requests use <code>/chat/completions</code> on this base URL.'
         },
         {
           id: 'together',
           label: 'Together AI',
           baseUrl: 'https://api.together.xyz/v1',
           hint:
-            'Unified endpoint for Meta, Mistral, DeepSeek, Google and more. Create an account at <a href="https://api.together.xyz/" target="_blank" rel="noopener">Together AI</a>, visit <strong>Settings → API Keys</strong>, generate a key, and paste it here.'
+            'Unified endpoint for Meta, Mistral, DeepSeek, Google and more. Create an account at <a href="https://api.together.xyz/" target="_blank" rel="noopener">Together AI</a>, visit <strong>Settings → API Keys</strong>, generate a key, and paste it here. The client targets <code>/chat/completions</code> beneath this base URL.'
         },
         {
           id: 'fireworks',
           label: 'Fireworks AI',
           baseUrl: 'https://api.fireworks.ai/inference/v1',
           hint:
-            'Fireworks hosts Mixtral-based instruct models and other OSS LLMs. In the Fireworks dashboard open <strong>API Keys</strong>, click <strong>Create API Key</strong>, and copy the value for use with this endpoint.'
+            'Fireworks hosts Mixtral-based instruct models and other OSS LLMs. In the Fireworks dashboard open <strong>API Keys</strong>, click <strong>Create API Key</strong>, and copy the value for use with this endpoint. Requests go to the <code>/chat/completions</code> path.'
         },
         {
           id: 'deepseek',
           label: 'DeepSeek',
           baseUrl: 'https://api.deepseek.com',
           hint:
-            'Access DeepSeek’s reasoning models. Sign in to <a href="https://platform.deepseek.com/" target="_blank" rel="noopener">DeepSeek</a>, choose <strong>Access API → API Keys</strong>, create a key, and store it securely because it is only shown once.'
+            'Access DeepSeek’s reasoning models. Sign in to <a href="https://platform.deepseek.com/" target="_blank" rel="noopener">DeepSeek</a>, choose <strong>Access API → API Keys</strong>, create a key, and store it securely because it is only shown once. Calls use the <code>/chat/completions</code> route on this host.'
         },
         {
           id: 'hyperbolic',
           label: 'Hyperbolic',
           baseUrl: 'https://api.hyperbolic.xyz/v1',
           hint:
-            'Scaled-down OSS models with OpenAI compatibility. Log in to Hyperbolic, create an API key in your dashboard, and use it alongside this base URL.'
+            'Scaled-down OSS models with OpenAI compatibility. Log in to Hyperbolic, create an API key in your dashboard, and use it alongside this base URL. The client appends <code>/chat/completions</code> automatically when sending messages.'
         },
         {
           id: 'deepinfra',
           label: 'DeepInfra',
           baseUrl: 'https://api.deepinfra.com/v1/openai',
           hint:
-            'Chat, completion, and embedding APIs for open-source LLMs. Generate an API key from the <a href="https://deepinfra.com/" target="_blank" rel="noopener">DeepInfra</a> console and include it in the <code>Authorization</code> header.'
+            'Chat, completion, and embedding APIs for open-source LLMs. Generate an API key from the <a href="https://deepinfra.com/" target="_blank" rel="noopener">DeepInfra</a> console and include it in the <code>Authorization</code> header. Requests hit <code>/chat/completions</code> under this base URL.'
         },
         {
           id: 'perplexity',
           label: 'Perplexity Sonar',
           baseUrl: 'https://api.perplexity.ai',
           hint:
-            'Grounded web-search models with an OpenAI-style API. From the Perplexity account dashboard create an API key, then use it with this endpoint.'
+            'Grounded web-search models with an OpenAI-style API. From the Perplexity account dashboard create an API key, then use it with this endpoint. Messages are sent to the <code>/chat/completions</code> path.'
         },
         {
           id: 'huggingface-router',
           label: 'Hugging Face router',
           baseUrl: 'https://router.huggingface.co/v1',
           hint:
-            'Route to providers like Novita, Groq or Together via the model name. Create or reuse a Hugging Face access token at <a href="https://huggingface.co/settings/tokens" target="_blank" rel="noopener">huggingface.co/settings/tokens</a> and pass it as your API key.'
+            'Route to providers like Novita, Groq or Together via the model name. Create or reuse a Hugging Face access token at <a href="https://huggingface.co/settings/tokens" target="_blank" rel="noopener">huggingface.co/settings/tokens</a> and pass it as your API key. Requests go to <code>/chat/completions</code> on this base URL.'
         },
         {
           id: 'huggingface-tgi',
           label: 'Hugging Face TGI (local)',
           baseUrl: 'http://localhost:8080/v1',
           hint:
-            'Run <strong>text-generation-inference</strong> locally and point the client at this base URL. No API key is required when running on your own machine.'
+            'Run <strong>text-generation-inference</strong> locally and point the client at this base URL. No API key is required when running on your own machine, and the app automatically calls <code>/chat/completions</code> on this server.'
         },
         {
           id: 'lorax',
           label: 'LoRAX (local server)',
           baseUrl: 'http://127.0.0.1:8080/v1',
           hint:
-            'LoRAX exposes an OpenAI-compatible endpoint on your workstation. Start the server and use any placeholder key if authentication is disabled.'
+            'LoRAX exposes an OpenAI-compatible endpoint on your workstation. Start the server and use any placeholder key if authentication is disabled. Requests go to the <code>/chat/completions</code> route.'
         },
         {
           id: 'lmstudio',
           label: 'LM Studio (desktop)',
           baseUrl: 'http://localhost:1234/v1',
           hint:
-            'LM Studio ships with an OpenAI-compatible API. Start the local server from the LM Studio interface and use this URL (the API key field can stay empty).'
+            'LM Studio ships with an OpenAI-compatible API. Start the local server from the LM Studio interface and use this URL (the API key field can stay empty). The client appends <code>/chat/completions</code> when sending chat messages.'
         },
         {
           id: 'ollama',
           label: 'Ollama (local)',
           baseUrl: 'http://localhost:11434/v1',
           hint:
-            'Ollama serves local LLaMA, Mistral and Phi models. No API key is required—any string will work—so you can leave the token blank.'
+            'Ollama serves local LLaMA, Mistral and Phi models. No API key is required—any string will work—so you can leave the token blank. Chats are sent to <code>/chat/completions</code> on this host.'
         },
         {
           id: 'runpod',
           label: 'RunPod vLLM worker',
           baseUrl: 'https://api.runpod.ai/v2/ENDPOINT_ID/openai/v1',
           hint:
-            'Each RunPod worker exposes an OpenAI-compatible interface. Replace <code>ENDPOINT_ID</code> with your worker ID and use the API key from the RunPod dashboard.',
+            'Each RunPod worker exposes an OpenAI-compatible interface. Replace <code>ENDPOINT_ID</code> with your worker ID and use the API key from the RunPod dashboard. Provide the base URL here; the app will append <code>/chat/completions</code> when sending requests.',
           detect: value => value.startsWith('https://api.runpod.ai/v2/')
         },
         {
@@ -1090,7 +1090,7 @@
           label: 'Baseten (model-specific URL)',
           baseUrl: 'https://{model_id}.api.baseten.co/environments/{environment}/content/v1',
           hint:
-            'Deploy models with Engine Builder to receive an OpenAI-style endpoint. Use the format <code>https://{model_id}.api.baseten.co/environments/&lt;env&gt;/content/v1</code> and authenticate with a Baseten personal API key created from <strong>Account → API keys</strong>.',
+            'Deploy models with Engine Builder to receive an OpenAI-style endpoint. Use the format <code>https://{model_id}.api.baseten.co/environments/&lt;env&gt;/content/v1</code> and authenticate with a Baseten personal API key created from <strong>Account → API keys</strong>. The client sends requests to <code>/chat/completions</code> beneath this path.',
           detect: value => value.includes('.api.baseten.co')
         },
         {
@@ -1098,7 +1098,7 @@
           label: 'Custom / self-hosted endpoint',
           baseUrl: '',
           hint:
-            'Paste any OpenAI-compatible base URL, such as a corporate gateway or another local server. Remember to include the provider’s API key (if required) and press <strong>Save config</strong> after editing.'
+            'Paste any OpenAI-compatible base URL, such as a corporate gateway or another local server. Remember to include the provider’s API key (if required) and press <strong>Save config</strong> after editing. Requests automatically target <code>/chat/completions</code> relative to the base you enter.'
         }
       ];
 
@@ -1147,7 +1147,7 @@
         if (target.id === 'custom' && currentValue) {
           html += `<br /><strong>Using:</strong> <code>${escapeHtml(currentValue)}</code>`;
         } else if (target.baseUrl) {
-          html += `<br /><strong>Endpoint URL:</strong> <code>${escapeHtml(target.baseUrl)}</code>`;
+          html += `<br /><strong>Base URL:</strong> <code>${escapeHtml(target.baseUrl)}</code>`;
         }
         if (!html) {
           endpointHint.textContent = '';
@@ -1386,7 +1386,7 @@
         if (!chatNotice) return;
         const instructions = [];
         if (!state.hasEndpoint) {
-          instructions.push('Enter an API endpoint in Settings to send messages.');
+          instructions.push('Enter an API base URL in Settings to send messages.');
         }
         if (state.hasEndpoint && !state.hasModel) {
           instructions.push('Refresh and select a model before chatting.');
@@ -1432,7 +1432,7 @@
         const placeholder = !state.hasThread
           ? 'Select or start a chat to enable messaging'
           : !state.hasEndpoint
-            ? 'Add an API endpoint to enable messaging'
+            ? 'Add an API base URL to enable messaging'
             : !state.hasModel
               ? 'Select a model to enable messaging'
               : 'Type your message';
@@ -1769,7 +1769,50 @@
       }
 
       /**
-       * Send the conversation to the configured API endpoint. Uses the current
+       * Given a configured base URL, return the chat completions endpoint.
+       * Normalizes relative URLs and strips existing query/hash fragments.
+       */
+      function deriveChatCompletionsUrl(endpoint) {
+        let url;
+        try {
+          url = new URL(endpoint);
+        } catch (err) {
+          url = new URL(endpoint, window.location.href);
+        }
+        const segments = url.pathname.split('/').filter(Boolean);
+        const endsWith = suffix =>
+          segments.length >= suffix.length &&
+          suffix.every((part, index) => segments[segments.length - suffix.length + index] === part);
+
+        if (endsWith(['chat', 'completions'])) {
+          url.search = '';
+          url.hash = '';
+          return url.toString();
+        }
+
+        const modelsIndex = segments.lastIndexOf('models');
+        if (modelsIndex !== -1) {
+          segments.length = modelsIndex;
+        }
+
+        while (segments.length) {
+          const last = segments[segments.length - 1];
+          if (last === 'chat' || last === 'completions') {
+            segments.pop();
+            continue;
+          }
+          break;
+        }
+
+        const nextSegments = segments.concat(['chat', 'completions']);
+        url.pathname = '/' + nextSegments.join('/');
+        url.search = '';
+        url.hash = '';
+        return url.toString();
+      }
+
+      /**
+       * Send the conversation to the configured API base URL. Uses the current
        * model and thread messages. Throws if required fields are missing or
        * the response status is not ok.
        */
@@ -1800,7 +1843,8 @@
         if (config.token) {
           headers['Authorization'] = `Bearer ${config.token}`;
         }
-        const response = await fetch(config.endpoint, {
+        const chatEndpoint = deriveChatCompletionsUrl(config.endpoint);
+        const response = await fetch(chatEndpoint, {
           method: 'POST',
           headers,
           body: JSON.stringify(body)
