--- a/index.html
+++ b/index.html
@@ -1841,17 +1841,16 @@
           url.hash = '';
           return url.toString();
         }
-        const versionIndex = segments.findIndex(seg => /^v\d+$/i.test(seg));
-        let baseSegments;
-        if (versionIndex !== -1) {
-          baseSegments = segments.slice(0, versionIndex + 1);
-        } else if (segments.length > 0) {
-          baseSegments = segments.slice(0, -1);
-        } else {
-          baseSegments = [];
+
+        let versionIndex = -1;
+        for (let i = segments.length - 1; i >= 0; i--) {
+          if (/^v\d+$/i.test(segments[i])) {
+            versionIndex = i;
+            break;
+          }
         }
-        const pathSegments = baseSegments.length ? baseSegments.concat('models') : ['models'];
-        url.pathname = '/' + pathSegments.join('/');
+        const baseSegments = versionIndex !== -1 ? segments.slice(0, versionIndex + 1) : segments;
+        url.pathname = '/' + [...baseSegments, 'models'].join('/');
         url.search = '';
         url.hash = '';
         return url.toString();
